--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <script>
-      const apiUrl = "https://nodejs-backend-l0ln.onrender.com";
+      const apiUrl = "https://nodejs-backend-l0ln.onrender.com/api";
 
       function extractMonthNumber(month) {
         const months = {
